added images into card formate using figure tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,88 @@
   <title>My Gallery</title>
 </head>
 <body>
-  
+  <div id="wrapper">
+    <div class="container">
+      <h1>My Gallery</h1>
+      <div class="gallery">
+
+        <figure class="card">
+          <img src="./images/image1.jpg" alt="Image1">
+          <figcaption>Image 1</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image2.jpg" alt="Image1">
+          <figcaption>image 2</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image3.jpg" alt="Image1">
+          <figcaption>Image 3</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image4.jpg" alt="Image1">
+          <figcaption>Image 4</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image5.jpg" alt="Image1">
+          <figcaption>Image 5</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image6.jpg" alt="Image1">
+          <figcaption>Image 6</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image7.jpg" alt="Image1">
+          <figcaption>Image 7</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image8.jpg" alt="Image1">
+          <figcaption>Image 8</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image9.jpg" alt="Image1">
+          <figcaption>Image 9</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image10.jpg" alt="Image1">
+          <figcaption>Image 10</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image11.jpg" alt="Image1">
+          <figcaption>Image 11</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image12.jpg" alt="Image1">
+          <figcaption>image 12</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image13.jpg" alt="Image1">
+          <figcaption>Image 13</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image14.jpg" alt="Image1">
+          <figcaption>Image 14</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./images/image15.jpg" alt="Image1">
+          <figcaption>Image1 15</figcaption>
+        </figure>
+
+      </div>
+    </div>
+  </div>
 </body>
 </html>
